--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,9 @@
+/* universal styles */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* shared  styles */
 body {
   font-family: "Open Sans", sans-serif;
@@ -22,10 +28,27 @@ body {
   background-color: #fd6e0a;
 }
 
+.section-title {
+  color: var(--Dark-01, #181818);
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: var(--Dark-03, #757575);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
 /* header styles */
 
 header {
   background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 /* nav styles */
@@ -41,7 +64,6 @@ nav {
   font-size: 45px;
   font-style: normal;
   font-weight: 800;
-  line-height: normal;
 }
 
 nav > ul {
@@ -59,12 +81,45 @@ nav a {
 }
 
 .banner {
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px 0px 150px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+
+.banner-content {
+  max-width: 500px;
+}
+
+.banner-greeting {
+  color: var(--Dark-02, #474747);
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.banner-title {
+  color: var(--Dark-01, #181818);
+  font-size: 85px;
+  font-weight: 700;
+}
+
+.banner-content p {
+  color: var(--Dark-03, #757575);
+  font-size: 18px;
+  font-weight: 400;
+  margin-block: 20px;
+  line-height: 30px; /* 166.667% */
 }
 
 .profile-picture {
   width: 584px;
   height: 676px;
+}
+
+/* about section styles */
+.about {
+  border-radius: 10px;
+  background: #fff8f3;
+  margin-block: 130px;
+  padding: 130px;
 }
