--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -228,6 +228,46 @@ main section {
 
 .resume button {
   display: block;
-  margin: 50px auto;
+  margin-inline: auto;
+  margin-top: 50px;
 }
 /* resume section styles ends */
+
+footer {
+  background-color: #fff8f3;
+  padding: 130px 230px;
+  margin-top: 130px;
+  display: flex;
+  gap: 117px;
+}
+
+footer .section-description,
+.section-title {
+  text-align: left;
+}
+
+.footer-column {
+  width: 50%;
+}
+
+.contact-form {
+  padding-top: 28px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.contact-form input,
+textarea {
+  padding: 18px 30px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  color: var(--Dark-03, #757575);
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+
+.contact-form button {
+  align-self: flex-start;
+}
